--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" id="text10" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" id="btn10" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
