added day.js in, tried more options making the local storage work

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- added in day.js here with this link. -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+<script>dayjs().format()</script>
+
     <script src="script.js"></script>
   </body>
 </html>
