--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div id="hour-10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description tx10" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" id="btn10" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
